--- a/public/style/modal-style.css
+++ b/public/style/modal-style.css
@@ -22,7 +22,7 @@
 .popup-header-cancel-icon{
     width: 20px;
     height: 20px;
-    margin-right: 10px;
+    margin-right: 5px;
     margin-top: 5px;
     display: inline-block;
     background-image: url("../img/icons/cross.png");
@@ -35,7 +35,7 @@
 
 .popup-container-message{
     width: 100%;
-    height: 60px;
+    min-height: 60px;
     line-height: 30px;
     display: block;
     position: relative;
