--- a/public/style/modal-style.css
+++ b/public/style/modal-style.css
@@ -17,6 +17,7 @@
     display: block;
     position: relative;
     text-align: right;
+    transform: translateY(-2px);
 }
 
 .popup-header-cancel-icon{
