--- a/public/style/all-orders.css
+++ b/public/style/all-orders.css
@@ -273,3 +273,31 @@
     margin-top: 5px;
 }
 
+.edit-customer-form{
+    width: 100%;
+    height: auto;
+}
+
+.edit-customer-input-field{
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.25);
+    padding-left: 10px;
+    font-size: 20px;
+    font-family: 'Big Shoulders Text', cursive;
+    letter-spacing: 0.5px;
+    border: none;
+}
+
+.edit-customer-info-header{
+    width: 100%;
+    height: 30px;
+    white-space: nowrap;
+    line-height: 30px;
+    font-size: 20px;
+    font-family: 'Big Shoulders Text', cursive;
+    letter-spacing: 0.5px;
+    margin-bottom: 5px;
+
+}
