--- a/public/style/products.css
+++ b/public/style/products.css
@@ -68,94 +68,28 @@
 }
 
 .products-product{
-    width: 450px;
-    height: 440px;
+    width: 300px;
+    height:  auto;
     display: inline-block;
     background-color: #ffffff;
     font-size: 16px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.25);
     position: relative;
-    margin-left: 33px;
+    margin-left: 75px;
     
     margin-top: 20px;
     vertical-align: top;
 }
 
 .products-product-img{
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
-    display: inline-block;
-    width: 210px;
-    height: 280px;
-    border: rgba(0, 0, 0, 0.2) solid 0.5px;
-
-    margin-left: 25px;
-    margin-top: 20px;
-}
-
-.product-info-container{
-    position: relative;
-    height: auto;
-    display: inline-block;
-    padding: 5px;
-    width: 185px;
-    vertical-align: top;
-    margin-top: 40px;
-    font-weight: bold;
-}
-
-.products-produt-title{
-    font-size: 20px;
-    text-align: center;
-    font-family: 'Playfair Display', serif;
-    display: block;
-}
-
-.products-produt-price{
-    font-size: 28px;
-    text-align: center;
-    display: block;
-    font-family: 'Playfair Display', serif;
-    margin-top: 15px;
-}
-
-.products-product-button-container{
-    height: 145px;
-    width: 440px;
-    margin: 5px;
-    display: inline-block;
-    text-align: center;
-}
-
-.products-product-add-to-cart{
-    width: 400px;
-    height: 40px;
-
-    margin-bottom: 10px;
-    background-color: #212121;
-    position: relative;
-    cursor: pointer;
-    user-select: none;
-    transition: background-color 0.2s;
     box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.25);
     display: inline-block;
-    margin-top: 20px;
+    width: 100%;
+    height: 400px;
 }
 
-.products-product-read-more{
-    width: 400px;
-    height: 40px;
-
-    background-color: #212121;
-    position: relative;
-    cursor: pointer;
-    user-select: none;
-    transition: background-color 0.2s;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.25);
-    display: inline-block;
-}
 
 .products-product-add-to-cart:hover, .products-product-read-more:hover{
     background-color: #ffffff;
@@ -433,4 +367,26 @@
     font-family: 'Josefin Sans', sans-serif;
     white-space: nowrap;
     margin-left: 10px;
+}
+
+.large-product-image{
+    margin-left: 20px;
+}
+
+
+
+@media only screen and (max-width: 1250px) {
+
+}
+
+@media only screen and (max-width: 991px) {
+
+}
+
+@media only screen and (max-width: 767px) {  
+
+}
+
+@media only screen and (max-width: 567px) {
+   
 }
