--- a/public/style/products.css
+++ b/public/style/products.css
@@ -8,6 +8,7 @@
     user-select: none;
     position: relative;
     box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.25);
+    z-index: 2;
 }
 
 .products-nav-button-container{
@@ -426,6 +427,39 @@
     margin-left: 20px;
 }
 
+.products-nav-button-expand-container{
+    width: 200px;
+    height: auto;
+    position: absolute;
+    top: 100%;
+    display: none;
+    z-index: 2;
+    box-shadow: 1px 4px 4px 2px rgba(0, 0, 0, 0.25);
+}
+
+.products-nav-button-expand-container:hover{
+    display: block;
+}
+
+#products-nav-button-about:hover .products-nav-button-expand-container{
+    display: block;
+}
+
+.product-nav-button-expand-alt{
+    width: 100%;
+    height: 50px;
+    background-color: white;
+    border-bottom: rgba(0, 0, 0, 0.25) 0.5px solid;
+    line-height: 50px;
+    padding-left: 10px;
+    font-size: 14px;
+    cursor: pointer;
+}   
+
+.product-nav-button-expand-alt:hover p{
+    text-decoration: underline;
+}
+
 
 
 @media only screen and (max-width: 1250px) {
@@ -563,3 +597,4 @@
         margin-left: 20px;
     }
 }
+
