--- a/public/style/create-terms-and-conditions.css
+++ b/public/style/create-terms-and-conditions.css
@@ -1,5 +1,5 @@
 .edit-terms-and-conditions-container{
-    width: auto;
+    width: 100%;
     height: auto;
 
     display: inline-block;
@@ -32,7 +32,7 @@
 
 .edit-terms-and-conditions-button{
     height: 40px;
-    width: 150px;
+    width: 110px;
     background-color: rgb(66, 66, 66);
     display: inline-block;
     position: relative;
@@ -41,6 +41,7 @@
     border-radius: 100px;
     box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.25);
     vertical-align: middle;
+
 }
 
 .edit-terms-and-conditions-refresh-btn{
@@ -71,7 +72,7 @@
 }
 
 .edit-terms-and-conditions-button-text{
-    font-size: 16px;
+    font-size: 14px;
     color: white;
     font-family: "Big Shoulders Text";
     position: absolute;
@@ -233,4 +234,18 @@
 
 .small-btn{
     width: 120px;
+}
+
+
+.about-page-image-header{
+    width: 200px;
+    height: 80px;
+    vertical-align: middle;
+    display: inline-block;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-top: 10px;
+    border: rgba(0, 0, 0, 0.25) solid 0.2px;
+    margin-right: 40px;
 }
